# internship_infotecs25

./: README.md
MSVC/: CMakeLists.txt  CMakePresets.json  Dockerfile
MSVC/build-x64/: ALL_BUILD.vcxproj  CMakeCache.txt  SQLite.sln  SQLite.vcxproj  SQLite.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_log.txt  cmake_install.cmake
MSVC/build-x64/SQLite.dir/Release/: SQLite_x64.dll.recipe
MSVC/build-x64/SQLite.dir/Release/SQLite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MSVC/build-x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
MSVC/build-x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
MSVC/build-x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
MSVC/build-x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SQLite.sln  SQLite.vcxproj  SQLite.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_log.txt  cmake_install.cmake
MSVC/build-x86/SQLite.dir/Release/: SQLite_x86.dll.recipe
MSVC/build-x86/SQLite.dir/Release/SQLite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  SQLite.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MSVC/build-x86/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
MSVC/build-x86/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
MSVC/linux-build-x64/: CMakeCache.txt  Makefile  build_log.txt  cmake_install.cmake
MSVC/linux-build-x86/: CMakeCache.txt  Makefile  build_log.txt  cmake_install.cmake
(+19 files in other folders)
